chandeliers-lus/tests/fail/ui/tc/extern/wrong-out-node.stderr
error[E0308]: mismatched types
  --> tests/fail/ui/tc/extern/wrong-out-node.rs:15:17
   |
15 |     extern node wrong_step_sig(i, j : int) returns (b: bool);
   |                 ^^^^^^^^^^^^^^                      -------- expected `Nillable<bool>` because of return type
   |                 |
   |                 expected `Nillable<bool>`, found `Nillable<f64>`
   |
   = note: expected enum `Nillable<bool>`
              found enum `Nillable<f64>`
